# BSS-OSS-Rust-Ecosystem

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL  LICENSE-TMF-APIS  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-cd.yml  publish.yml  (+1 more)
crates/analytics/: Cargo.toml
crates/analytics/src/: error.rs  lib.rs  models.rs  service.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: auth.rs  gateway.rs  lib.rs  metrics.rs  middleware.rs  rate_limit.rs  validation.rs  versioning.rs
crates/audit-logging/: Cargo.toml
crates/audit-logging/src/: lib.rs  logger.rs  models.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: api_performance.rs  api_throughput.rs
crates/blockchain-audit/: Cargo.toml
crates/blockchain-audit/src/: block.rs  chain.rs  error.rs  lib.rs  service.rs
crates/cache/: Cargo.toml
crates/cache/src/: client.rs  error.rs  lib.rs
crates/data-export/: Cargo.toml
crates/data-export/src/: error.rs  export.rs  import.rs  lib.rs  models.rs
crates/edge-computing/: Cargo.toml
crates/edge-computing/src/: error.rs  lib.rs  models.rs  node.rs  orchestrator.rs  sync.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: bus.rs  events.rs  lib.rs  publisher.rs  subscriber.rs
crates/graphql-api/: Cargo.toml
crates/graphql-api/src/: lib.rs  resolvers.rs  schema.rs
crates/iot-management/: Cargo.toml
crates/iot-management/src/: error.rs  lib.rs  models.rs  service.rs
crates/ml-predictive-analytics/: Cargo.toml
crates/ml-predictive-analytics/src/: error.rs  lib.rs  models.rs  predictor.rs  training.rs
crates/mobile-sdk/: Cargo.toml
crates/mobile-sdk/src/: cache.rs  client.rs  error.rs  generator.rs  lib.rs  models.rs
crates/multi-tenant/: Cargo.toml
crates/multi-tenant/src/: error.rs  lib.rs  models.rs  service.rs
crates/order-orchestrator/: Cargo.toml
crates/order-orchestrator/src/: decomposition.rs  dependencies.rs  events.rs  lib.rs  orchestrator.rs  state.rs
crates/pcf/: Cargo.toml  README.md
crates/pcf-nextgen/: Cargo.toml  README.md
crates/pcf-nextgen/openapi/: README.md
crates/pcf-nextgen/src/: config.rs  lib.rs  main.rs  metrics.rs
crates/pcf-nextgen/src/adapters/: http.rs  mod.rs  swagger_index.html  swagger_ui.rs
crates/pcf-nextgen/src/application/: closed_loop.rs  intent_engine.rs  marketplace_service.rs  mod.rs  monetization_engine.rs  orchestrator.rs  policy_fast_path.rs  twin.rs
crates/pcf-nextgen/src/domain/: intent.rs  marketplace.rs  metrics.rs  mod.rs  monetization.rs  tenant.rs
crates/pcf-nextgen/src/infrastructure/: circuit_breaker.rs  events.rs  mod.rs
crates/pcf-nextgen/tests/: http_smoke.rs
crates/pcf/src/: ai.rs  charging.rs  cpf.rs  diameter.rs  error.rs  lib.rs  models.rs  pcf_engine.rs  policy.rs  quota.rs  tax_id.rs
crates/pcm-engine/: Cargo.toml
crates/pcm-engine/src/: bundling.rs  complex_pricing.rs  eligibility.rs  engine.rs  lib.rs  pricing.rs  rules.rs  versioning.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: bundling.rs  eligibility.rs  engine.rs  lib.rs  network.rs  pricing.rs  sla.rs
crates/realtime-analytics/: Cargo.toml
crates/realtime-analytics/src/: error.rs  lib.rs  models.rs  service.rs  websocket.rs
crates/resource-management/: Cargo.toml
crates/resource-management/src/: capacity.rs  error.rs  lib.rs  models.rs  reservation.rs  topology.rs
crates/revenue-management/: Cargo.toml
crates/revenue-management/src/: billing_cycle.rs  charging.rs  error.rs  lib.rs  models.rs  rating.rs  settlement.rs
crates/security/: Cargo.toml
crates/security/src/: audit.rs  error.rs  lib.rs  mfa.rs  models.rs  oauth.rs  rbac.rs
crates/security/tests/: audit_tests.rs  mfa_tests.rs  oauth_tests.rs  rbac_tests.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: main.rs
crates/service-orchestrator/: Cargo.toml
crates/service-orchestrator/src/: activation.rs  dependencies.rs  lib.rs  orchestrator.rs  state.rs  workflow.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: coverage.rs  database.rs  fixtures.rs  helpers.rs  integration_tests.rs  lib.rs  load_testing.rs
crates/tmf-apis/core/: Cargo.toml
crates/tmf-apis/core/src/: error.rs  lib.rs  models.rs  validation.rs
crates/utils/: Cargo.toml
crates/utils/src/: helpers.rs  lib.rs  logger.rs  observability.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: client.rs  error.rs  lib.rs  models.rs
docs/: CONTRIBUTING.md  DONATION.md  ENTERPRISE.md  LICENSING.md  PRODUCTION.md  TESTING.md  architecture_roadmap_implementation.md  bss-oss-pcf-nextgen.md  pcf_nextgen_architecture.md  roadmap.md  tmf_standards.md
k8s/: README.md  app-deployment.yaml  configmap.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml
migrations/: 001_initial_schema.sql  002_tmf622_ordering_schema.sql  003_tmf637_inventory_schema.sql  004_tmf629_customer_schema.sql  005_tmf678_billing_schema.sql  006_tmf679_usage_schema.sql  007_tmf688_appointment_schema.sql  008_tmf641_service_order_schema.sql  009_tmf638_service_inventory_schema.sql  010_tmf640_service_activation_schema.sql  011_tmf702_resource_activation_schema.sql  012_tmf639_resource_inventory_schema.sql  013_tmf645_resource_order_schema.sql  014_tmf635_usage_schema.sql  015_tmf668_party_role_schema.sql  016_tmf632_party_schema.sql  017_tmf669_identity_schema.sql  018_tmf642_alarm_schema.sql  019_tmf656_slice_schema.sql  020_service_orchestration_schema.sql  021_resource_management_schema.sql  022_revenue_management_schema.sql  023_security_schema.sql  024_multi_tenant_schema.sql  025_analytics_schema.sql  026_backup_recovery_schema.sql  027_iot_management_schema.sql  028_tmf633_trouble_ticket_schema.sql  029_tmf634_quote_schema.sql
openapi/: pcf-nextgen-sba.yaml
scripts/: load-test.sh  run-all-tests.sh  security-audit.sh  smoke-pcf-nextgen.ps1  test-coverage.sh
tests/: e2e_workflows.rs  integration_tmf_apis.rs
(+164 files in other folders)
