[workspace]
members = [
    "crates/tmf-apis/core",
    "crates/tmf-apis/tmf620_catalog",
    "crates/pcm-engine",
    "crates/utils",
    "crates/server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
jsonwebtoken = "9"
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
