[workspace]
members = [
    "crates/tmf-apis/core",
    "crates/tmf-apis/tmf620_catalog",
    "crates/tmf-apis/tmf622_ordering",
    "crates/tmf-apis/tmf637_inventory",
    "crates/tmf-apis/tmf629_customer",
    "crates/tmf-apis/tmf678_billing",
    "crates/tmf-apis/tmf679_usage",
    "crates/tmf-apis/tmf688_appointment",
    "crates/pcm-engine",
    "crates/utils",
    "crates/server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
jsonwebtoken = "9"
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
repository = "https://github.com/rabbittrix/BSS-OSS-Rust-Ecosystem.git"
documentation = "https://github.com/rabbittrix/BSS-OSS-Rust-Ecosystem/blob/main/README.md"

keywords = [
    "bss",
    "oss",
    "rust",
    "tmf",
    "tmforum",
    "openapi",
    "openapi-v3",
    "openapi-v2",
    "openapi-v1",
    "openapi-v0",
    "openapi-v0.1",
    "openapi-v0.2",
    "openapi-v0.3",
    "openapi-v0.4",
    "openapi-v0.5",
    "openapi-v0.6",
    "openapi-v0.7",
    "openapi-v0.8",
    "openapi-v0.9",
]
categories = [
    "network",
    "telecom",
    "bss",
    "oss",
    "tmf",
    "tmforum",
    "openapi",
    "openapi-v3",
    "openapi-v2",
    "openapi-v1",
    "openapi-v0",
    "openapi-v0.1",
    "openapi-v0.2",
    "openapi-v0.3",
    "openapi-v0.4",
    "openapi-v0.5",
    "openapi-v0.6",
    "openapi-v0.7",
    "openapi-v0.8",
    "openapi-v0.9",
]

[workspace.build-dependencies]
cargo-release = "0.25.22"

[workspace.dev-dependencies]
cargo-release = "0.25.22"

[workspace.package.metadata]
release = { crate-name = "bss-oss-rust" }
