[workspace]
members = [
    "crates/tmf-apis/core",
    "crates/tmf-apis/tmf620_catalog",
    "crates/tmf-apis/tmf622_ordering",
    "crates/tmf-apis/tmf637_inventory",
    "crates/tmf-apis/tmf629_customer",
    "crates/tmf-apis/tmf678_billing",
    "crates/tmf-apis/tmf679_usage",
    "crates/tmf-apis/tmf688_appointment",
    "crates/tmf-apis/tmf641_service_order",
    "crates/tmf-apis/tmf638_service_inventory",
    "crates/tmf-apis/tmf640_service_activation",
    "crates/tmf-apis/tmf702_resource_activation",
    "crates/tmf-apis/tmf639_resource_inventory",
    "crates/tmf-apis/tmf645_resource_order",
    "crates/tmf-apis/tmf635_usage",
    "crates/tmf-apis/tmf668_party_role",
    "crates/tmf-apis/tmf632_party",
    "crates/tmf-apis/tmf669_identity",
    "crates/tmf-apis/tmf642_alarm",
    "crates/tmf-apis/tmf656_slice",
    "crates/pcm-engine",
    "crates/utils",
    "crates/api-gateway",
    "crates/order-orchestrator",
    "crates/service-orchestrator",
    "crates/resource-management",
    "crates/event-bus",
    "crates/policy-engine",
    "crates/revenue-management",
    "crates/security",
    "crates/test-utils",
    "crates/server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
] }
jsonwebtoken = "9"
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5.5"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.24"
opentelemetry_sdk = "0.24"
opentelemetry-otlp = "0.16"
opentelemetry-prometheus = "0.13"
tracing-opentelemetry = "0.24"
async-trait = "0.1"
futures = "0.3"

[workspace.package]
version = "0.2.5"
edition = "2021"
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
repository = "https://github.com/rabbittrix/BSS-OSS-Rust-Ecosystem.git"
documentation = "https://github.com/rabbittrix/BSS-OSS-Rust-Ecosystem/blob/main/README.md"

keywords = [
    "bss",
    "oss",
    "rust",
    "tmf",
    "tmforum",
    "openapi",
    "openapi-v3",
    "openapi-v2",
    "openapi-v1",
    "openapi-v0",
    "openapi-v0.1",
    "openapi-v0.2",
    "openapi-v0.3",
    "openapi-v0.4",
    "openapi-v0.5",
    "openapi-v0.6",
    "openapi-v0.7",
    "openapi-v0.8",
    "openapi-v0.9",
]
categories = [
    "network",
    "telecom",
    "bss",
    "oss",
    "tmf",
    "tmforum",
    "openapi",
    "openapi-v3",
    "openapi-v2",
    "openapi-v1",
    "openapi-v0",
    "openapi-v0.1",
    "openapi-v0.2",
    "openapi-v0.3",
    "openapi-v0.4",
    "openapi-v0.5",
    "openapi-v0.6",
    "openapi-v0.7",
    "openapi-v0.8",
    "openapi-v0.9",
]

[workspace.build-dependencies]
cargo-release = "0.25.22"

[workspace.dev-dependencies]
cargo-release = "0.25.22"

[workspace.package.metadata]
release = { crate-name = "bss-oss-rust" }
