[package]
name = "analytics"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
description = "Advanced analytics and reporting"
repository.workspace = true
documentation.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
chrono = { workspace = true }
thiserror = "1.0"
log.workspace = true
