[package]
name = "bss-oss-api-gateway"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license-file = "../../LICENSE-COMMERCIAL"
description = "API Gateway and Mediation Layer for BSS/OSS Rust ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-prometheus.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
dashmap.workspace = true
futures.workspace = true
