[package]
name = "audit-logging"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
description = "Comprehensive audit logging for all BSS/OSS operations"
repository.workspace = true
documentation.workspace = true

[dependencies]
sqlx = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait = "0.1"
