[package]
name = "cache"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license-file = "../../LICENSE-COMMERCIAL"
description = "Redis caching layer for BSS/OSS Rust Ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait = "0.1"
