[package]
name = "data-export"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
description = "Data export and import capabilities"
repository.workspace = true
documentation.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
chrono = { workspace = true }
thiserror = "1.0"
log.workspace = true
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
