[package]
name = "edge-computing"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Proprietary"
description = "Edge computing support for distributed processing"
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
