[package]
name = "iot-management"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Proprietary"
description = "IoT Device Management for BSS/OSS Rust Ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
tmf-apis-core = { path = "../tmf-apis/core", version = "0.3.0" }
actix-web.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
utoipa.workspace = true
