[package]
name = "mobile-sdk"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license-file = "../../LICENSE-COMMERCIAL"
description = "Mobile SDK generator and core library for iOS and Android"
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
