[package]
name = "multi-tenant"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license-file = "../../LICENSE-COMMERCIAL"
description = "Multi-tenant support with tenant isolation"
repository.workspace = true
documentation.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
chrono = { workspace = true }
thiserror = "1.0"
log.workspace = true
async-trait = "0.1"
