[package]
name = "bss-oss-order-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Order Orchestration Service for BSS/OSS Rust ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
sqlx.workspace = true
async-trait.workspace = true
tmf-apis-core = { path = "../tmf-apis/core", version = "0.2.5" }
tmf622-ordering = { path = "../tmf-apis/tmf622_ordering", version = "0.2.5" }
tmf641-service-order = { path = "../tmf-apis/tmf641_service_order", version = "0.2.5" }
tmf645-resource-order = { path = "../tmf-apis/tmf645_resource_order", version = "0.2.5" }
log.workspace = true
