[package]
name = "bss-oss-pcf-nextgen"
# Published independently of the workspace meta-version; bump for each crates.io release.
version = "0.3.1"
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = "Cloud-native 5G PCF: SBA-style policy edge, intent engine, closed-loop control, digital twin simulation, Policy-as-a-Service, and CHF-ready monetization"
repository.workspace = true
documentation.workspace = true
keywords = ["pcf", "5g", "sba", "policy", "telecom"]
categories = ["network-programming", "asynchronous", "web-programming"]

[lib]
name = "bss_oss_pcf_nextgen"
path = "src/lib.rs"

[[bin]]
name = "bss-oss-pcf-nextgen"
path = "src/main.rs"

[dependencies]
bss-oss-pcf = { path = "../pcf", version = "0.3.0" }
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
prometheus.workspace = true

[dev-dependencies]
tokio-test = "0.4"
