[package]
name = "bss-oss-policy-engine"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Proprietary"
description = "Policy Engine for pricing, eligibility, bundling, and SLA management"
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rhai = "1.20"                # Scripting engine for policy rules
log.workspace = true
