[package]
name = "bss-oss-server"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license.workspace = true
description = "BSS/OSS Rust ecosystem server application"
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "bss-oss-rust"
path = "src/main.rs"

[dependencies]
tmf-apis-core = { path = "../tmf-apis/core", version = "0.1.5" }
tmf620-catalog = { path = "../tmf-apis/tmf620_catalog", version = "0.1.5" }
tmf622-ordering = { path = "../tmf-apis/tmf622_ordering", version = "0.1.5" }
tmf637-inventory = { path = "../tmf-apis/tmf637_inventory", version = "0.1.5" }
bss-oss-utils = { path = "../utils", version = "0.1.5" }
actix-web.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tokio.workspace = true
log.workspace = true
