[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license.workspace = true
description = "Test utilities and helpers for BSS/OSS Rust ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
tmf-apis-core = { path = "../tmf-apis/core", version = "0.2.5" }
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"
mockall = "0.13"
