[package]
name = "bss-oss-utils"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "MIT"
description = "Utility functions and helpers for BSS/OSS Rust ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
