[package]
name = "webhooks"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Proprietary"
description = "Webhook notification system for BSS/OSS Rust Ecosystem"
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1"
