[package]
name = "tmf-apis-core"
version.workspace = true
edition.workspace = true
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
license = "Apache-2.0"
description = "Core models and error types for TM Forum Open APIs implementation in Rust"
repository.workspace = true
documentation.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
utoipa.workspace = true
